--- a/app/index.html
+++ b/app/index.html
@@ -616,7 +616,7 @@
                   </div>
                   <h3>Lightning Talk - Front-end</h3>
                   <p>
-                    Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                    É um ninja front-end? Come HTML, CSS e JS com farinha? Quer falar sobre código, processos ou sua experiência? Manda ver!
                   </p>
                   <div class="btn-lt">
                       <a href="#">Envie sua proposta</a>
@@ -629,7 +629,7 @@
                   </div>
                   <h3>Lightning Talk - Back-end</h3>
                   <p>
-                    Eita Mainha!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                    Expresse seu código com palavras. Melhorias de código, ferramentas ou qualquer processo para um programador.
                   </p>
                   <div class="btn-lt">
                       <a href="#">Envie sua proposta</a>
@@ -642,7 +642,7 @@
                   </div>
                   <h3>Lightning Talk - Design</h3>
                   <p>
-                    Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                    Design centrado ao código. Mostre sua ideia de como um bom design pode transformar produtos e códigos.
                   </p>
                   <div class="btn-lt">
                     <!-- lightning talk confirmado -->
@@ -679,8 +679,10 @@
                 <img src="images/contato-logo.png" class="logo-contato" alt="">
                 <div class="address">
                   <img src="images/big-pin.png" alt="">
-                  Rua Prof. Silvio de Macedo, 125, <br>
-                  Jatiúca, Maceió - AL
+                  <a href="http://goo.gl/UQOw6D">
+                    Rua Prof. Silvio de Macedo, 125, <br>
+                    Jatiúca, Maceió - AL
+                  </a>
                 </div>
                 <h3>Vem de fora?</h3>
                 <p class="outside-description">
@@ -688,13 +690,13 @@
                 </p>
                 <ul class="hotel-list">
                   <li>
-                    <a href="#">Alagoas Hostel <span class="money"></span></a>
+                    <a href="http://www.alagoashostel.com.br/" target="_blank">Alagoas Hostel <span class="money"></span></a>
                   </li>
                   <li>
-                    <a href="#">Pousada Praia Verde <span class="money"></span> <span class="money"></span></a>
+                    <a href="http://www.praiaverdemaceio.com.br/" target="_blank">Pousada Praia Verde <span class="money"></span> <span class="money"></span></a>
                   </li>
                   <li>
-                    <a href="#">Maceió Atlantic Suites <span class="money"></span> <span class="money"></span> <span class="money"></span></a>
+                    <a href="http://www.maceioatlantic.com.br/" target="_blank">Maceió Atlantic Suites <span class="money"></span> <span class="money"></span> <span class="money"></span></a>
                   </li>
                 </ul>
               </div>
@@ -773,72 +775,65 @@
           <div class="sponsor-category category-oferecimento">
             <h2 class="title">Oferecimento</h2>
             <a href="">
-              <img src="images/logo-id5.jpg" alt="">
+              <img src="images/trash/sponsors/id5.jpg" alt="Logo Id5">
             </a>
           </div>
 
-<!--
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Ouro</h2>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
-            </a>
-            <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/contato.png" alt="Logo contato">
             </a>
           </div>
 
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Prata</h2>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
-            </a>
-            <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/locaweb.png" alt="Logo Locaweb">
             </a>
           </div>
-
+          <!--
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Bronze</h2>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/logo-globo.jpg" alt="">
             </a>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/logo-globo.jpg" alt="">
             </a>
           </div>
-
-        </div> -->
+        -->
+        </div>
 
         <div class="partners-wrapper">
           <div class="partners">
             <h2 class="title">Conteúdo</h2>
-            <a href="">
-              <img src="images/trash/sponsors/abound.png" alt="">
+            <a href="http://abound.com.br/" target="_blank">
+              <img src="images/trash/sponsors/abound.png" alt="Logo abound">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Inscrições</h2>
-            <a href="">
-              <img src="images/trash/sponsors/eventick.png" alt="">
+            <a href="http://eventick.com.br/" target="_blank">
+              <img src="images/trash/sponsors/eventick.png" alt="Logo eventick">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Filme</h2>
-            <a href="">
-              <img src="images/trash/sponsors/tche.png" alt="">
+            <a href="http://tcheproducoes.com/" target="_blank">
+              <img src="images/trash/sponsors/tche.png" alt="Logo tche">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Social Media</h2>
-            <a href="">
-              <img src="images/trash/sponsors/kuka.png" alt="">
+            <a href="http://kukaestrategia.com/" target="_blank">
+              <img src="images/trash/sponsors/kuka.png" alt="Logo kuka">
             </a>
           </div>
-        </div> 
+        </div>
 
       </section>
 
@@ -943,7 +938,7 @@
 
         <div class="organizers-contact-info">
           <h2>Quer falar conosco? Manda ver!</h2>
-          <a href="">82 3317.7586</a> | <a href="mailto:contato@alagoasdevday.com.br">contato@alagoasdevday.com.br</a>
+          <a href="callto:8230215586">82 3021.5586</a> | <a href="mailto:contato@alagoasdevday.com.br">contato@alagoasdevday.com.br</a>
         </div>
 
         </div>
