Add helper to parameterize string Use parameterize helper to add class on html

--- a/app/index.html
+++ b/app/index.html
@@ -188,15 +188,13 @@
 
           <div id="cd-timeline">
 
-            <div class="cd-timeline-wrapper {{scheduleResults.schedules.indexOf(schedule) > 0 && schedule.speaker == null ? 'interval' : ''}}" ng-repeat="schedule in scheduleResults.schedules">
+            <div class="cd-timeline-wrapper {{ parameterize(schedule.title) }} {{scheduleResults.schedules.indexOf(schedule) > 0 && schedule.speaker == null ? 'interval' : ''}}" ng-repeat="schedule in scheduleResults.schedules">
               <div class="{{scheduleResults.schedules.indexOf(schedule) > 0 ? 'cd-timeline-block' : 'cd-timeline-block-custom'}}{{scheduleResults.schedules.indexOf(schedule) == scheduleResults.schedules.length - 1 ? '-custom event-end' : ''}}" ng-if="schedule.speaker == null">
                 <div class="cd-timeline-circle"></div>
                 <div class="cd-timeline-time">
                   {{ schedule.time }}
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/icon-timeline-{{scheduleResults.schedules.indexOf(schedule)}}.png" alt="" ng-if="scheduleResults.schedules.indexOf(schedule) > 0">
-                </div> <!-- cd-timeline-img -->
+                <div class="cd-timeline-img"></div> <!-- cd-timeline-img -->
                 <div class="cd-timeline-content">
                   {{ schedule.title }}
                 </div> <!-- cd-timeline-content -->
