--- a/app/index.html
+++ b/app/index.html
@@ -809,7 +809,7 @@
           <div class="partners">
             <h2 class="title">Conteúdo</h2>
             <a href="http://abound.com.br/" target="_blank">
-              <img src="images/trash/sponsors/abound.png" alt="Logo abound">
+              <img src="images/sponsors/abound.jpg" alt="Logo abound">
             </a>
           </div>
 
