--- a/app/index.html
+++ b/app/index.html
@@ -775,21 +775,21 @@
           <div class="sponsor-category category-oferecimento">
             <h2 class="title">Oferecimento</h2>
             <a href="">
-              <img src="images/trash/sponsors/id5.jpg" alt="Logo Id5">
+              <img src="images/sponsors/id5.jpg" alt="Logo Id5">
             </a>
           </div>
 
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Ouro</h2>
             <a href="">
-              <img src="images/trash/sponsors/contato.png" alt="Logo contato">
+              <img src="images/sponsors/contato.png" alt="Logo contato">
             </a>
           </div>
 
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Prata</h2>
             <a href="">
-              <img src="images/trash/sponsors/locaweb.png" alt="Logo Locaweb">
+              <img src="images/sponsors/locaweb.png" alt="Logo Locaweb">
             </a>
           </div>
           <!--
@@ -816,21 +816,21 @@
           <div class="partners">
             <h2 class="title">Inscrições</h2>
             <a href="http://eventick.com.br/" target="_blank">
-              <img src="images/trash/sponsors/eventick.png" alt="Logo eventick">
+              <img src="images/sponsors/eventick.png" alt="Logo eventick">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Filme</h2>
             <a href="http://tcheproducoes.com/" target="_blank">
-              <img src="images/trash/sponsors/tche.png" alt="Logo tche">
+              <img src="images/sponsors/tche.png" alt="Logo tche">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Social Media</h2>
             <a href="http://kukaestrategia.com/" target="_blank">
-              <img src="images/trash/sponsors/kuka.png" alt="Logo kuka">
+              <img src="images/sponsors/kuka.png" alt="Logo kuka">
             </a>
           </div>
         </div>
