For who, description

--- a/app/index.html
+++ b/app/index.html
@@ -106,35 +106,35 @@
                 <span class="persona">Front-end</span>
                 <img src="images/persona-frontend.png" alt="">
                 <p class="description">
-                    Padronização, web components, ferramentas, JavaScript, angular e mais.
+                  Angular.js, Web components, ferramentas, Javascript, SEO, UX e muito mais.
                 </p>
             </li>
             <li>
                 <span class="persona">Back-end</span>
                 <img src="images/persona-backend.png" alt="">
                 <p class="description">
-                    Ruby, php, Java, banco de dados e mais.
+                  Web services, Database, Ruby, PHP, TDD, Continuous integration e muito mais.
                 </p>
             </li>
             <li>
                 <span class="persona">Designers</span>
                 <img src="images/persona-designer.png" alt="">
                 <p class="description">
-                    Usabilidade, experiência do usuário, ui kits e mais.
+                    Usabilidade, experiência do usuário, ui kits e muito mais.
                 </p>
             </li>
             <li>
                 <span class="persona">Empresários</span>
                 <img src="images/persona-businessman.png" alt="">
                 <p class="description">
-                    Padronização, web components, ferramentas e código, muito código.
+                  Empreendedorismo em TI, desenvolvimento de software ágil, ferramentas para monitoramento e muito mais.
                 </p>
             </li>
             <li>
                 <span class="persona">Criativos</span>
                 <img src="images/persona-creative.png" alt="">
                 <p class="description">
-                    Padronização, web components, ferramentas e código, muito código.
+                  Startups, novas tecnologias, web components, tendências e muito mais.
                 </p>
             </li>
           </ul>
