--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="http://alagoasdevday.com.br">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Alagoas Dev Day 2015">
-    <meta property="og:image" content=""/>
+    <meta property="og:image" content="http://alagoasdevday.com.br/images/fb-share.jpg"/>
     <meta property="og:description" content="">
     <meta property="og:site_name" content="Alagoas Dev Day 2015">
     <meta property="article:author" content="https://www.facebook.com/devdayalagoas">
