Change label lighting talks to "coming son"

--- a/app/index.html
+++ b/app/index.html
@@ -617,7 +617,7 @@
                     É um ninja front-end? Come HTML, CSS e JS com farinha? Quer falar sobre código, processos ou sua experiência? Manda ver!
                   </p>
                   <div class="btn-lt">
-                      <a href="#">Envie sua proposta</a>
+                      <a href="#">Em breve</a>
                   </div>
                 </li>
 
@@ -630,7 +630,7 @@
                     Expresse seu código com palavras. Melhorias de código, ferramentas ou qualquer processo para um programador.
                   </p>
                   <div class="btn-lt">
-                      <a href="#">Envie sua proposta</a>
+                      <a href="#">Em breve</a>
                   </div>
                 </li>
 
@@ -644,7 +644,7 @@
                   </p>
                   <div class="btn-lt">
                     <!-- lightning talk confirmado -->
-                    <a href="#">Envie sua proposta</a>
+                    <a href="#">Em breve</a>
                   </div>
                 </li>
 
