--- a/app/index.html
+++ b/app/index.html
@@ -271,6 +271,35 @@
 
             <li class="speaker-item">
               <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/oncedev.png');">
+                </div>
+                <img src="images/trash/wilson-mendes.jpg" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Wilson Mendes</span>
+                <span class="speaker-job">Front-end Developer na OnceDev</span>
+                <span class="speaker-description">
+                  Google Developer Expert (GDE) AngularJS e organizador do GDG Salvador. Músico e designer em seu tempo livre.
+                </span>
+                <ul class="social-links">
+                  <li class="twitter">
+                    <a href="https://twitter.com/willmendesneto" target="_blank">Twitter</a>
+                  </li>
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/wilsonmendesneto" target="_blank">Facebook</a>
+                  </li>
+                  <li class="linkedin">
+                    <a href="https://www.linkedin.com/profile/view?id=92217141" target="_blank">LinkedIn</a>
+                  </li>
+                  <li class="keynote">
+                    <a href="#" target="_blank">Keynote</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
                 <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
                 <img src="images/trash/darth-vader.png" alt="">
               </div>
@@ -318,20 +347,6 @@
               </div>
               <div class="speaker-profile-informations">
                 <span class="speaker-name">c3po</span>
-                <span class="speaker-job">Desenvolvedor das Galáxias</span>
-                <span class="speaker-description">
-                  Desenvolvedor Ruby desde a era antiga. Gerente de desenvolvimento orbital e programador interestelar.
-                </span>
-              </div>
-            </li>
-
-            <li class="speaker-item">
-              <div class="speaker-profile-picture">
-                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
-                <img src="images/trash/chewbacca.png" alt="">
-              </div>
-              <div class="speaker-profile-informations">
-                <span class="speaker-name">chewbacca</span>
                 <span class="speaker-job">Desenvolvedor das Galáxias</span>
                 <span class="speaker-description">
                   Desenvolvedor Ruby desde a era antiga. Gerente de desenvolvimento orbital e programador interestelar.
@@ -479,7 +494,7 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/elton-minetto.jpg" alt="">
+                    <img src="images/trash/timeline-minetto.png" alt="Foto Elton Minetto">
                   </div>
                 </div>
 
