--- a/app/index.html
+++ b/app/index.html
@@ -390,7 +390,7 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/darth-vader.png" alt="">
+                    <img src="images/trash/timeline-vader.png" alt="">
                   </div>
                 </div>
 
@@ -411,12 +411,12 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/darth-vader.png" alt="">
+                    <img src="images/trash/timeline-yoda.png" alt="">
                   </div>
                 </div>
 
                 <div class="cd-timeline-content">
-                  <h2>Darth Vader</h2>
+                  <h2>Mestre Yoda</h2>
                   <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
@@ -515,13 +515,13 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/darth-vader.png" alt="">
+                    <img src="images/trash/timeline-c3po.png" alt="">
                   </div>
                 </div>
 
 
                 <div class="cd-timeline-content">
-                  <h2>Luke Skywalker</h2>
+                  <h2>C3po</h2>
                   <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
@@ -557,12 +557,12 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/darth-vader.png" alt="">
+                    <img src="images/trash/timeline-leia.png" alt="">
                   </div>
                 </div>
 
                 <div class="cd-timeline-content">
-                  <h2>Luke Skywalker</h2>
+                  <h2>Princesa Leia</h2>
                   <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
