Updates timeline and register

--- a/app/index.html
+++ b/app/index.html
@@ -411,12 +411,12 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/timeline-yoda.png" alt="">
+                    <img src="images/trash/wilson-mendes.jpg" alt="">
                   </div>
                 </div>
 
                 <div class="cd-timeline-content">
-                  <h2>Mestre Yoda</h2>
+                  <h2>Wilson Mendes</h2>
                   <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
@@ -759,14 +759,14 @@
                 <span class="ending">Acabando!</span>
               </div>
               <span class="price">R$45</span> <br>
-              <span class="valid">Válido até 28/fev</span>
+              <span class="valid">Válido até 13/mar</span>
             </li>
             <li class="disabled">
               <div class="register-header-box">
                 Lote 02
               </div>
               <span class="price">R$60</span> <br>
-              <span class="valid">Válido até 31/mar</span>
+              <span class="valid">Válido até 03/abr</span>
             </li>
             <li class="disabled">
               <div class="register-header-box">
