Add partners links

--- a/app/index.html
+++ b/app/index.html
@@ -787,31 +787,31 @@
 
           <div class="sponsor-category category-oferecimento">
             <h2 class="title">Oferecimento</h2>
-            <a href="">
+            <a href="http://id5.com.br/" target="_blank">
               <img src="images/sponsors/id5.jpg" alt="Logo Id5">
             </a>
           </div>
 
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Ouro</h2>
-            <a href="">
+            <a href="http://www.contatomaceio.com.br/" target="_blank">
               <img src="images/sponsors/contato.png" alt="Logo contato">
             </a>
           </div>
 
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Prata</h2>
-            <a href="">
+            <a href="http://www.locaweb.com.br/" target="_blank">
               <img src="images/sponsors/locaweb.png" alt="Logo Locaweb">
             </a>
           </div>
           <!--
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Bronze</h2>
-            <a href="">
+            <a href="" target="_blank">
               <img src="images/trash/sponsors/logo-globo.jpg" alt="">
             </a>
-            <a href="">
+            <a href="" target="_blank">
               <img src="images/trash/sponsors/logo-globo.jpg" alt="">
             </a>
           </div>
