--- a/app/index.html
+++ b/app/index.html
@@ -300,15 +300,29 @@
 
             <li class="speaker-item">
               <div class="speaker-profile-picture">
-                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
-                <img src="images/trash/darth-vader.png" alt="">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/themobilemajority.png');"></div>
+                <img src="images/trash/paulo-ribeiro.jpg" alt="">
               </div>
               <div class="speaker-profile-informations">
-                <span class="speaker-name">Darth Vader</span>
-                <span class="speaker-job">CEO das Galáxias</span>
+                <span class="speaker-name">Paulo Ribeiro</span>
+                <span class="speaker-job">Engenheiro Senior, The Mobile Majority</span>
                 <span class="speaker-description">
-                  Desenvolvedor Ruby desde a era antiga. Gerente de desenvolvimento orbital e programador interestelar.
+                  Mantenedor ativo da gem Fog. Apaixonado por arquitetura de software e Open Source. É um dos líderes no projeto RubyCasts Brasil e Engenheiro Senior na The Mobile Majority
                 </span>
+                <ul class="social-links">
+                  <li class="twitter">
+                    <a href="https://twitter.com/plribeiro3000" target="_blank">Twitter</a>
+                  </li>
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/plribeiro3000" target="_blank">Facebook</a>
+                  </li>
+                  <li class="linkedin">
+                    <a href="https://www.linkedin.com/profile/view?id=37261903" target="_blank">LinkedIn</a>
+                  </li>
+                  <li class="keynote">
+                    <a href="#" target="_blank">Keynote</a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -515,13 +529,13 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/timeline-c3po.png" alt="">
+                    <img src="images/trash/timeline-paulo.png" alt="">
                   </div>
                 </div>
 
 
                 <div class="cd-timeline-content">
-                  <h2>C3po</h2>
+                  <h2>Paulo Ribeiro</h2>
                   <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
@@ -805,17 +819,15 @@
               <img src="images/sponsors/locaweb.png" alt="Logo Locaweb">
             </a>
           </div>
-          <!--
+
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Bronze</h2>
-            <a href="" target="_blank">
-              <img src="images/trash/sponsors/logo-globo.jpg" alt="">
+            <a href="http://www.majority.co" target="_blank">
+              <img src="images/sponsors/themobilemajority.png" alt="">
             </a>
-            <a href="" target="_blank">
-              <img src="images/trash/sponsors/logo-globo.jpg" alt="">
-            </a>
+
           </div>
-        -->
+
         </div>
 
         <div class="partners-wrapper">
