--- a/app/index.html
+++ b/app/index.html
@@ -307,7 +307,7 @@
                 <span class="speaker-name">Paulo Ribeiro</span>
                 <span class="speaker-job">Engenheiro Senior, The Mobile Majority</span>
                 <span class="speaker-description">
-                  Mantenedor ativo da gem Fog. Apaixonado por arquitetura de software e Open Source. É um dos líderes no projeto RubyCasts Brasil e Engenheiro Senior na The Mobile Majority
+                  Mantenedor ativo da gem Fog. Apaixonado por arquitetura de software e Open Source. É um dos líderes no projeto RubyCasts Brasil e Engenheiro Senior na The Mobile Majority.
                 </span>
                 <ul class="social-links">
                   <li class="twitter">
