Add Twitter logo

--- a/app/index.html
+++ b/app/index.html
@@ -825,6 +825,9 @@
             <a href="http://www.majority.co" target="_blank">
               <img src="images/sponsors/themobilemajority.png" alt="">
             </a>
+            <a href="https://www.twitter.com" target="_blank">
+              <img src="images/sponsors/twiter.png" alt="">
+            </a>
 
           </div>
 
