Add Lilian Munno

--- a/app/index.html
+++ b/app/index.html
@@ -328,15 +328,29 @@
 
             <li class="speaker-item">
               <div class="speaker-profile-picture">
-                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
-                <img src="images/trash/princesa-leia.png" alt="">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/thoughtworks.png');"></div>
+                <img src="images/trash/lilian-munno.jpg" alt="">
               </div>
               <div class="speaker-profile-informations">
-                <span class="speaker-name">Princesa Leia</span>
-                <span class="speaker-job">Desenvolvedora das Galáxias</span>
+                <span class="speaker-name">Lilian De Munno</span>
+                <span class="speaker-job">Analista de Negócios Senior da ThoughtWorks</span>
                 <span class="speaker-description">
-                  Desenvolvedora Ruby desde a era antiga. Gerente de desenvolvimento orbital e programadora interestelar.
+                  Analista de Negócios Senior da ThoughtWorks, com experiência em projetos com equipes distribuídas, concentra sua atuação na Análise de Negócios Ágil, uma aplicação dos conceitos de análise de negócios em concordância com os princípios do manifesto ágil.
                 </span>
+                <ul class="social-links">
+                  <li class="twitter">
+                    <a href="https://twitter.com/limunno" target="_blank">Twitter</a>
+                  </li>
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/aveclestemps" target="_blank">Facebook</a>
+                  </li>
+                  <li class="linkedin">
+                    <a href="https://www.linkedin.com/in/lmunno" target="_blank">LinkedIn</a>
+                  </li>
+                  <li class="keynote">
+                    <a href="#" target="_blank">Keynote</a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -828,6 +842,11 @@
             <a href="https://www.twitter.com" target="_blank">
               <img src="images/sponsors/twiter.png" alt="">
             </a>
+            <a href="http://www.thoughtworks.com" target="_blank">
+              <img src="images/sponsors/thoughtworks.png" alt="">
+            </a>
+
+
 
           </div>
 
