Fix content Lilian De Munno

--- a/app/index.html
+++ b/app/index.html
@@ -335,7 +335,7 @@
                 <span class="speaker-name">Lilian De Munno</span>
                 <span class="speaker-job">Analista de Negócios Senior da ThoughtWorks</span>
                 <span class="speaker-description">
-                  Analista de Negócios Senior da ThoughtWorks, com experiência em projetos com equipes distribuídas, concentra sua atuação na Análise de Negócios Ágil, uma aplicação dos conceitos de análise de negócios em concordância com os princípios do manifesto ágil.
+                  Experiência em projetos com equipes distribuídas, concentra sua atuação na Análise de Negócios Ágil, uma aplicação dos conceitos de análise de negócios em concordância com os princípios do manifesto ágil.
                 </span>
                 <ul class="social-links">
                   <li class="twitter">
@@ -585,12 +585,12 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/timeline-leia.png" alt="">
+                    <img src="images/trash/lilian-munno.jpg" alt="">
                   </div>
                 </div>
 
                 <div class="cd-timeline-content">
-                  <h2>Princesa Leia</h2>
+                  <h2>Lilian De Munno</h2>
                   <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
